--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,8 @@ a.link {
   text-decoration: none;
   transition: background-size .2s; }
   a.link:hover {
-    background-size: 4px 50px; }
+    background-size: 4px 50px;
+    color: var(--background-light); }
 
 h1 {
   font-family: var(--heading);
