--- a/css/main.scss
+++ b/css/main.scss
@@ -70,6 +70,7 @@ a.link {
     transition: background-size .2s;
     &:hover {
       background-size: 4px 50px;
+      color: var(--background-light);
     }
 }
 h1 {
