--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root {
-  --text-color: #393f3e//#404745;
+  --text-color: #393f3e;
   --background-light: #e1e4e3;
   --background-darker: #C6CCCA;
   --accent: #e84a5f;
