--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,5 @@
 :root {
-  --text-color: #393f3e//#404745;//#333333;
+  --text-color: #393f3e;//#404745;//#333333;
   --background-light: #e1e4e3;//#fdfdfd
   --background-darker: #C6CCCA;//#fbf5f5//#f8f8f8;
   --accent: #e84a5f;
