--- a/css/medium.scss
+++ b/css/medium.scss
@@ -106,6 +106,9 @@
   figure {
     grid-column: 3 /span 8;
   }
+  figure.wide-image {
+    grid-column: 2 / span 10;
+  }
   .projects {
     .card {
       grid-column: span 6;
