--- a/css/main.css
+++ b/css/main.css
@@ -130,8 +130,10 @@ nav {
 
 .hero span {
   font-size: 1em;
-  margin-right: .75em;
+  margin-left: .75em;
   color: var(--accent); }
+  .hero span:first-of-type {
+    margin-left: 0; }
 
 .content-block ul {
   list-style-type: none;
@@ -180,7 +182,6 @@ nav {
       text-decoration: none; }
     .projects .card .card-text {
       padding: .5em;
-      vertical-align: middle;
       font-family: var(--heading); }
       .projects .card .card-text p {
         margin: 0;
