--- a/css/main.scss
+++ b/css/main.scss
@@ -223,7 +223,7 @@ nav {
       font-family: var(--heading);
       p {
         margin: 0;
-        // line-height: 1em;
+        line-height: 1em;
         color: var(--text-color)
       }
       span {
