--- a/css/main.scss
+++ b/css/main.scss
@@ -3,7 +3,7 @@
   --background-light: #e1e4e3;
   --background-darker: #C6CCCA;
   --accent: #C5463E;
-  --accent-two: #3ebdc5; //#FCDD0F;
+  --accent-two: #FCDD0F;
   --grg: 16px;
   --gcg: 16px;
   --heading: 'Roboto', sans-serif;
@@ -72,6 +72,9 @@ h3 {
     position: relative;
     bottom: -.25em;
     left: 0;
+  }
+  span.lowercase {
+    text-transform: lowercase;
   }
 }
 h4 {
