--- a/css/main.scss
+++ b/css/main.scss
@@ -2,7 +2,7 @@
   --text-color: #393f3e;
   --background-light: #e1e4e3;
   --background-darker: #C6CCCA;
-  --accent: #C5463E;
+  --accent: #B33D36;//#C5463E;
   --accent-two: #FCDD0F;
   --grg: 16px;
   --gcg: 16px;
