--- a/css/main.css
+++ b/css/main.css
@@ -132,11 +132,16 @@ nav {
         text-align: left; }
 
 .hero .tags {
+  position: relative;
   font-size: 1em;
   margin-left: .75em;
   color: var(--accent); }
   .hero .tags:first-of-type {
     margin-left: 0; }
+  .hero .tags::before {
+    content: '\00B7';
+    position: absolute;
+    left: -.25em; }
 
 .content-block ul {
   list-style-type: none;
@@ -153,8 +158,7 @@ nav {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-gap: calc(2 * var(--grg)) var(--gcg); }
+  grid-template-columns: repeat(12, 1fr); }
   .projects h3 {
     grid-column: 1 / span 12; }
   .projects .card {
