--- a/css/main.css
+++ b/css/main.css
@@ -445,6 +445,9 @@ footer {
   footer div {
     grid-column: 4 / span 6; }
 
+  .hide-lg {
+    display: none; }
+
   nav {
     grid-column: 1 / span 12; }
     nav ul {
