--- a/css/main.css
+++ b/css/main.css
@@ -476,6 +476,9 @@ footer {
   figure.wide-image {
     grid-column: 3 / span 8; }
 
+  figure.extra-wide-image {
+    grid-column: 2 / span 10; }
+
   .project-nav {
     font-size: 1em; }
     .project-nav .project-prev {
