--- a/css/large.scss
+++ b/css/large.scss
@@ -50,6 +50,9 @@
   figure.wide-image {
     grid-column: 3 / span 8;
   }
+  figure.extra-wide-image {
+    grid-column: 2 / span 10;
+  }
   .project-nav {
     font-size: 1em;
     .project-prev {
